--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1610,177 +1610,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Analyte\n",
-       "Aldrin, Total                5\n",
-       "Arsenic, Total              11\n",
-       "Cadmium, Total               7\n",
-       "Chemical Group A, Total      5\n",
-       "Chlordane, cis-, Total      29\n",
-       "                          ... \n",
-       "Silver, Total                7\n",
-       "TCDD, 2,3,7,8-, Total        1\n",
-       "TCDF, 2,3,7,8-, Total        1\n",
-       "Total Solids, Total        291\n",
-       "Zinc, Total                  7\n",
-       "Name: SampleID, Length: 219, dtype: int64"
-      ]
-     },
-     "execution_count": 143,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#in all units\n",
-    "bas1= bassnan2.groupby([\"Analyte\"]).count()[\"SampleID\"]\n",
-    "bas1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 144,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "SampleID\n",
-       "06RMP052406F5G2301            2\n",
-       "06RMP061906F1G3301            2\n",
-       "06RMP081706F5G1301            2\n",
-       "06RMP081706F5G1302            2\n",
-       "06RMP091906F5G4301            2\n",
-       "                             ..\n",
-       "SUISLN-STB-5-072007-1.7827    1\n",
-       "SUISLN-STB-6-072007-1.9148    1\n",
-       "SUISLN-STB-7-072007-2.3105    1\n",
-       "SUISLN-STB-8-072007-2.0546    1\n",
-       "SUISLN-STB-9-072007-2.7839    1\n",
-       "Name: Analyte, Length: 570, dtype: int64"
-      ]
-     },
-     "execution_count": 144,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "groupedid= bassnan2.groupby([\"SampleID\"]).nunique()[\"Analyte\"]\n",
-    "groupedid"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 145,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "SampleID\n",
-       "06RMP052406F5G2301            2\n",
-       "06RMP061906F1G3301            2\n",
-       "06RMP081706F5G1301            2\n",
-       "06RMP081706F5G1302            2\n",
-       "06RMP091906F5G4301            2\n",
-       "                             ..\n",
-       "SUISLN-STB-5-072007-1.7827    1\n",
-       "SUISLN-STB-6-072007-1.9148    1\n",
-       "SUISLN-STB-7-072007-2.3105    1\n",
-       "SUISLN-STB-8-072007-2.0546    1\n",
-       "SUISLN-STB-9-072007-2.7839    1\n",
-       "Name: Analyte, Length: 570, dtype: int64"
-      ]
-     },
-     "execution_count": 145,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# groupedid.columns = ['sampleid', 'analyte', 'unit', 'result', 'weightavg']\n",
-    "# groupedid\n",
-    "# groupedid = groupedid.DataFrame({'SampleID':['sampleid'], '': 'analyte'})\n",
-    "groupedid.columns = ['sampleid', 'analyte']\n",
-    "groupedid"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 146,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Analyte\n",
-       "DDD(p,p'), Total             57\n",
-       "DDE(p,p'), Total             63\n",
-       "Lipid, Total                123\n",
-       "Mercury, Total              278\n",
-       "Moisture, Total             459\n",
-       "Nonachlor, trans-, Total     58\n",
-       "PCB 052, Total               73\n",
-       "PCB 066, Total               53\n",
-       "PCB 095, Total               69\n",
-       "PCB 097, Total               51\n",
-       "PCB 099, Total               81\n",
-       "PCB 101, Total               81\n",
-       "PCB 110, Total               78\n",
-       "PCB 118, Total               79\n",
-       "PCB 128, Total               67\n",
-       "PCB 138, Total               58\n",
-       "PCB 141, Total               63\n",
-       "PCB 146, Total               58\n",
-       "PCB 149, Total               84\n",
-       "PCB 151, Total               81\n",
-       "PCB 153, Total               84\n",
-       "PCB 170, Total               79\n",
-       "PCB 174, Total               61\n",
-       "PCB 177, Total               71\n",
-       "PCB 180, Total               84\n",
-       "PCB 183, Total               56\n",
-       "PCB 187, Total               85\n",
-       "PCB 194, Total               53\n",
-       "PCB 201, Total               54\n",
-       "PCB 203, Total               52\n",
-       "Total Solids, Total         291\n",
-       "Name: SampleID, dtype: int64"
-      ]
-     },
-     "execution_count": 146,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#in all units\n",
-    "basfifty= bas1[bas1>= 50]\n",
-    "basfifty"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 147,
    "metadata": {
     "scrolled": true
@@ -2111,6 +1940,7 @@
     }
    ],
    "source": [
+    "#convert them to lowercase because postgress doesn't like upper\n",
     "Bass.columns = Bass.columns.str.lower()\n",
     "Bass"
    ]
@@ -2278,174 +2108,8 @@
     }
    ],
    "source": [
+    "#also remove the space and \"g\" from weightavg because postgres doesn't like that too\n",
     "Bass.columns = ['sampleid', 'analyte', 'unit', 'result', 'weightavg']\n",
-    "Bass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 150,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sampleid</th>\n",
-       "      <th>analyte</th>\n",
-       "      <th>unit</th>\n",
-       "      <th>result</th>\n",
-       "      <th>weightavg</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1/1/1977-541ST1478-1947</td>\n",
-       "      <td>Chlordane, cis-, Total</td>\n",
-       "      <td>ng/g ww</td>\n",
-       "      <td>20.00</td>\n",
-       "      <td>400.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1/1/1977-541ST1478-1947</td>\n",
-       "      <td>DDD(p,p'), Total</td>\n",
-       "      <td>ng/g ww</td>\n",
-       "      <td>60.00</td>\n",
-       "      <td>400.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1/1/1977-541ST1478-1947</td>\n",
-       "      <td>DDE(p,p'), Total</td>\n",
-       "      <td>ng/g ww</td>\n",
-       "      <td>160.00</td>\n",
-       "      <td>400.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1/1/1977-541ST1478-1947</td>\n",
-       "      <td>Dieldrin, Total</td>\n",
-       "      <td>ng/g ww</td>\n",
-       "      <td>10.00</td>\n",
-       "      <td>400.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>1/1/1977-541ST1478-1947</td>\n",
-       "      <td>Lipid, Total</td>\n",
-       "      <td>% ww</td>\n",
-       "      <td>7.00</td>\n",
-       "      <td>400.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14872</th>\n",
-       "      <td>SB-08</td>\n",
-       "      <td>PCB 151, Total</td>\n",
-       "      <td>ng/g ww</td>\n",
-       "      <td>0.63</td>\n",
-       "      <td>1021.25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14873</th>\n",
-       "      <td>SB-08</td>\n",
-       "      <td>PCB 153, Total</td>\n",
-       "      <td>ng/g ww</td>\n",
-       "      <td>3.23</td>\n",
-       "      <td>1021.25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14877</th>\n",
-       "      <td>SB-08</td>\n",
-       "      <td>PCB 170, Total</td>\n",
-       "      <td>ng/g ww</td>\n",
-       "      <td>0.60</td>\n",
-       "      <td>1021.25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14880</th>\n",
-       "      <td>SB-08</td>\n",
-       "      <td>PCB 180, Total</td>\n",
-       "      <td>ng/g ww</td>\n",
-       "      <td>1.37</td>\n",
-       "      <td>1021.25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14881</th>\n",
-       "      <td>SB-08</td>\n",
-       "      <td>PCB 187, Total</td>\n",
-       "      <td>ng/g ww</td>\n",
-       "      <td>1.15</td>\n",
-       "      <td>1021.25</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>4322 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                      sampleid                 analyte     unit  result  \\\n",
-       "0      1/1/1977-541ST1478-1947  Chlordane, cis-, Total  ng/g ww   20.00   \n",
-       "2      1/1/1977-541ST1478-1947        DDD(p,p'), Total  ng/g ww   60.00   \n",
-       "3      1/1/1977-541ST1478-1947        DDE(p,p'), Total  ng/g ww  160.00   \n",
-       "5      1/1/1977-541ST1478-1947         Dieldrin, Total  ng/g ww   10.00   \n",
-       "9      1/1/1977-541ST1478-1947            Lipid, Total     % ww    7.00   \n",
-       "...                        ...                     ...      ...     ...   \n",
-       "14872                    SB-08          PCB 151, Total  ng/g ww    0.63   \n",
-       "14873                    SB-08          PCB 153, Total  ng/g ww    3.23   \n",
-       "14877                    SB-08          PCB 170, Total  ng/g ww    0.60   \n",
-       "14880                    SB-08          PCB 180, Total  ng/g ww    1.37   \n",
-       "14881                    SB-08          PCB 187, Total  ng/g ww    1.15   \n",
-       "\n",
-       "       weightavg  \n",
-       "0         400.00  \n",
-       "2         400.00  \n",
-       "3         400.00  \n",
-       "5         400.00  \n",
-       "9         400.00  \n",
-       "...          ...  \n",
-       "14872    1021.25  \n",
-       "14873    1021.25  \n",
-       "14877    1021.25  \n",
-       "14880    1021.25  \n",
-       "14881    1021.25  \n",
-       "\n",
-       "[4322 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 150,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Bassg = Bass.groupby('sampleid')\n",
     "Bass"
    ]
   },
@@ -4071,13 +3735,6 @@
    "source": [
     "pd.read_sql_query('select * from carp_table', con=engine).head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
