--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -22,6 +22,13 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "##Striped Bass Data "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 137,
    "metadata": {},
@@ -3738,6 +3745,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Raw Cell Format",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
